0.9.1 - 28/06/2020

Fixed
    Cant search for images (#122)
    When downloading an image based on an alias, the servrer may return a
        new image with a different fingerprint to the one sent with the request
        so updated this to use the new fingerprint if there is one

Changed
    Imges will now actually filter results of the search and not return everything

0.9.0 - 27/06/2020

Added
    Version check showing if there is an update available (#191)
    CRUD operations for image aliases (#170)
    Update image "public" & "auto update" properties (#170)
    Display some of the system details provided in LXD >= 4.1 (#206)
    Export instance as image
    Create profiles (#175)
    Allow user to create custom dashboards of instance metrics
    Documenation for instance settings (#218)
    Backup scheduling (#189)

Fixed
    Cant load project inforatmion
    Cant upload file to instance files
    Cant load backups for instance (#211)
    Sidebar lost when LXD host goes offline (#152)

Changed
    Inject userId if requested by controller so the $userId variable in a
    controller will always be locked to the user using the app

    Use DB for validing if user is admin instead of session (#194)

    Re-purpose the cluster page, access it by clicking a cluster on the dashboard
    sidebar (#183)

    Store the user project in the database for each host, it can be over written
    anytime with a header (#194)

    Use the LXD recursion param to drasticly improve fetchin instances time

    Use objects because I need practise and its better

    Add show password toggle when adding servers (#208)

Fixed
    Cant add more than one profile to deploy cloud config (#198)

Removed
    Removed instance settings desription (#218)

0.8.0 - 09/05/2020

Added
    Bulk action to stop containers (#184)
    Bulk action to start containers (#185)
    Add (optional) select GPU when deploying a cloud config (#199)

Changed